test/ppx_irmin/deriver/errors/unsupported_type_package.ml
module type S = sig
  val x : unit
end

type t = (module S) [@@deriving irmin]
