test/ppx_irmin/deriver/errors/unsupported_type_package.expected
File "unsupported_type_package.ml", line 5, characters 9-19:
Error: ppx_irmin: package type (module S) encountered. Package types are not Irmin-serialisable.
